# dry_agent

./: .dockerignore  .env-dist  .gitignore  Cargo.toml  LICENSE.TXT  Makefile  README.md  deployment.template.yaml  deployment.yaml  dry_agent  secret.template.yaml
_lib/: dry_agent_alias.sh
app/: Dockerfile  entrypoint.sh  pyproject.toml  supervisord.conf
app/app/: alembic.ini  broadcast.py  dependencies.py  get_token.py  main.py  patch_transport.py
app/app/lib/: db.py  docker_context_watcher.py  json.py  llm_util.py  rate_limit.py  require_client_cn.py  system_prompt.jinja2  tmux.py  xdg_open_pipe.py
app/app/middleware/: auth.py
app/app/migrations/versions/: f882f425bee0_initial_ddl.py  f882f425bee0_initial_ddl.sql
app/app/models/: chat_model.py  chat_model.sql  events.py
app/app/routes/: __init__.py  apps.py  docker_context.py  env_dist.py  repo.py  services.py  terminal.py
app/app/routes/api/: __init__.py  apps.py  chat.py  chat_example.md  chat_example2.md  d_rymcg_tech.py  docker_context.py  env_dist.py  events.py  instances.py  lib.py  llm_util.py  projects.py  repo.py  ssh_config.py  terminal.py
app/app/static/: command-button.js  styles.css  terminal.js
app/app/templates/: apps_available.html  apps_config.html  base.html  command_button.html  docker_context.html  index.html  login.html  repo_branch.html  repo_page.html  repo_pull.html  terminal.html  terminal_inline_test.html
app/app/templates/components/: command_button.html  inline_terminal.html
app/app/templates/partials/: apps_list.html
app/frontend/: package-lock.json  package.json  svelte.config.js
app/frontend/src/: app.html  app.scss
app/frontend/src/lib/: AppInstances.svelte  AppsTable.svelte  ChatLLM.svelte  DockerContext.svelte  GitRepository.svelte  InlineTerminal.svelte  ModalTerminal.svelte  ProjectsTable.svelte  SSHConfig.svelte  Terminal.svelte  TerminalView.svelte  listenToEvents.js  markdown.js  stores.js  utils.js
app/frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
app/frontend/src/routes/apps/: +page.js  +page.svelte
app/frontend/src/routes/chat/: +page.svelte
app/frontend/src/routes/config/: +page.js  +page.svelte
app/frontend/src/routes/context/: +page.svelte
app/frontend/src/routes/inline-terminal-test/: +page.svelte
app/frontend/src/routes/instances/: +page.svelte
app/frontend/src/routes/projects/: +page.svelte
app/frontend/src/routes/repository/: +page.svelte
app/frontend/src/routes/settings/: +page.svelte
app/frontend/src/routes/terminal/: +page.svelte
app/frontend/src/routes/traefik/: +page.svelte
app/frontend/src/routes/workstation/: +page.svelte
app/frontend/static/: styles.css
auth/: Dockerfile  main.py
bot/: Dockerfile  pyproject.toml
bot/bot/: __main__.py  bot.py  util.py
ca/: Dockerfile  entrypoint.sh
frontend/: Dockerfile  mdsx.config.js  nginx.conf  nginx.development.conf  package-lock.json  start.sh  svelte.config.js
litellm/: Dockerfile  config.yaml
src/: bot.rs  config.rs  llm.rs  main.rs  models.rs  mqtt.rs
test_llm/: Dockerfile  docker.html  docker.py  schema.json  test.py
test_structured_output/: Cargo.toml  pyproject.toml  test.py
test_structured_output/src/: main.rs
traefik/: Dockerfile  dynamic.template.yaml  entrypoint.sh  traefik.template.yaml
(+27 files in other folders)
