[package]
name = "dry_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenv = "0.15.0"
matrix-sdk = "0.10.0"
reqwest = { version = "0.12.12", features = ["json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }

