[package]
name = "dry_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-openai = "0.28.0"
async-trait = "0.1.87"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
matrix-sdk = { version = "0.10.0", features = ["sqlite"] }
paho-mqtt = "0.13.1"
pem = "3.0.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }
x509-parser = "0.17.0"

