[tool.poetry]
name = "app"
version = "0.1.0"
description = "dry_agent webapp"
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
dicewarepy = "^1.0.3"

[tool.poetry.group.dev.dependencies]
